AG-13468 Small spacing fix

--- a/documentation/ag-grid-docs/src/components/module-mappings/ModuleConfiguration.module.scss
+++ b/documentation/ag-grid-docs/src/components/module-mappings/ModuleConfiguration.module.scss
@@ -10,9 +10,10 @@
 .bundles,
 .charts {
     display: flex;
+    align-items: center;
 
-    span {
-        min-width: 94px;
+    .label {
+        width: 100px;
         font-weight: var(--text-semibold);
     }
 
